--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -88,6 +88,11 @@
 			"pattern": "register",
 			"name": "register",
 			"target": "register"
+		},
+		{
+			"pattern": "requestpeg",
+			"name": "requestpeg",
+			"target": "requestpeg"
 		}
         ],
         "targets": {
@@ -106,7 +111,12 @@
         "register": {
           "viewId": "register",
           "viewName": "Register"
-        }
+        },
+		"requestpeg": {
+			"viewId": "register",
+			"viewName": "RequestPEG"
+		  }
+		
         }
       }
   }
