--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -134,6 +134,11 @@
                "pattern": "feedbackdetails/{feedbackID}",
                "name": "feedbackdetails",
                "target": "feedbackdetails"
+            },
+            {
+               "pattern": "myteam",
+               "name": "myteam",
+               "target": "myteam"
             }
          ],
          "targets": {
@@ -180,6 +185,10 @@
             "feedbackdetails": {
                "viewId": "feedbackdetails",
                "viewName": "FeedbackDetails"
+            },
+            "myteam": {
+               "viewId": "myteam",
+               "viewName": "MyTeamFeedback"
             }
          }
       }
