--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -70,6 +70,14 @@
             }
          }
       },
+      "resources": {
+        "css": [
+         {
+           "uri": "css/style.css"
+         }
+        ]
+      },
+      
       "routing": {
          "config": {
             "routerClass": "sap.m.routing.Router",
